GNOME Bugzilla – Bug 671445
Screen not locked on lid close when lid close action set to 'blank'.
Last modified: 2012-03-16 10:26:27 UTC
Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=662747 Relevant settings: org.gnome.settings-daemon.plugins.power lid-close-ac-action 'blank' org.gnome.settings-daemon.plugins.power lid-close-battery-action 'blank' org.gnome.desktop.screensaver lock-enabled true With these settings, closing the laptop lid should blank the screen, which should in turn lock the screen, such that reopening the lid reveals an unlock dialog rather than the user's unsecured desktop. However, this does not occur: closing the lid blanks the screen but does not lock it, and reopening the lid gives access to the user's account. By contrast, leaving the system idle until the screensaver kicks in results in a properly locked screen. I can reproduce this with a freshly created user account, just by setting the first two keys above (lid-close-{ac,battery}-action); lock-enabled already defaults to true. It looks like gnome-settings-daemon needs to emit a lock signal as part of blanking, as it currently does when suspending.
commit 0ac43d82c686b96bcf174151962c1556c28390fe Author: Richard Hughes <richard@hughsie.com> Date: Fri Mar 16 10:25:11 2012 +0000 power: Lock the screensaver if the lid is closed and lock is enabled Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=671445