power: Lock the screensaver if the lid is closed and lock is enabled

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=671445